--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -12,4 +12,4 @@ parameters:
     mailer_password: ringwood
     locale: en
     secret: 6cc5af7038d9b2ac3fae549231bc3b821221071c
-    app_version: 1.0-277-g1b56100
+    nms_version: 1.0.0
