--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+nms_cafe:
+    resource: "@NmsCafeBundle/Resources/config/routing.yml"
+    prefix:   /
+
 # app/config/routing.yml
 nms_admin:
     resource: "@NmsAdminBundle/Resources/config/routing.yml"
