alter default routing to boheme cafe homepage add base template add default template

--- a/src/Boheme/CafeBundle/Resources/config/routing.yml
+++ b/src/Boheme/CafeBundle/Resources/config/routing.yml
@@ -1,5 +1,5 @@
 boheme_cafe_homepage:
-    pattern:  /hello/{name}
+    pattern:  /
     defaults: { _controller: BohemeCafeBundle:Default:index }
 
 BohemeCafeBundle_meal:
